<resources>
    <string name="app_name">Spawtify</string>
    <string name="landing_page">Landing Page</string>
    <string name="browse_songs">Browse Songs</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_playlists">My Playlists</string>
    <string name="change_password">Change Password</string>
    <string name="secret_admin_stuff">Secret Admin Stuff</string>
...
