...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MyPlaylistsButton" />

    <Button
        android:id="@+id/AdminButton"
        android:visibility="invisible"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:text="@string/secret_admin_stuff"
        android:textAlignment="center"
...
